GitVersion1/objects/PotenCalculationOperative__c.object
<CustomObject>
    <fields>
        <fullName>Annual_CFE_CON__c</fullName>
        <label>Annual CFE CON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_CFE_CON_js__c</fullName>
        <inlineHelpText>Store formula used for JS</inlineHelpText>
        <label>Annual CFE CON js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_CFE__c</fullName>
        <label>Annual CFE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_CFE_js__c</fullName>
        <label>Annual_CFE_js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_MT__c</fullName>
        <label>Annual Volume MT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume__c</fullName>
        <label>Annual Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_js__c</fullName>
        <description>Technical Field to fetch formula used in javascript</description>
        <label>Annual Volume js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Volume_mt_js__c</fullName>
        <label>Annual_Volume_mt_js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CFE__c</fullName>
        <label>CFE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculation_Key__c</fullName>
        <formula>TEXT(TypeOfCalculation__c) +  TEXT(Species__c) +  TEXT(Product_Function__c) +  TEXT(Type__c)</formula>
        <label>Calculation Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution_js__c</fullName>
        <label>Contribution_js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Potential_Check__c</fullName>
        <formula>TEXT( TypeOfCalculation__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Species__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Product_Function__c ) + &quot; &quot; + &quot;-&quot; + &quot; &quot; + TEXT( Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Function__c</fullName>
        <label>Product Function</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Creep</fullName>
                </value>
                <value>
                    <fullName>Pre-Starter</fullName>
                </value>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Other Piglet</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Finisher</fullName>
                </value>
                <value>
                    <fullName>Sow</fullName>
                </value>
                <value>
                    <fullName>Sow Gestation</fullName>
                </value>
                <value>
                    <fullName>Lactation</fullName>
                </value>
                <value>
                    <fullName>Boar</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Heifer</fullName>
                </value>
                <value>
                    <fullName>Dry Cow</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Lactating Meat</fullName>
                </value>
                <value>
                    <fullName>Breeder</fullName>
                </value>
                <value>
                    <fullName>Grower/Finisher</fullName>
                </value>
                <value>
                    <fullName>Pullet</fullName>
                </value>
                <value>
                    <fullName>Layer</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>Cow Calf</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_potential__c</fullName>
        <label>Remaining potential</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Species__c</fullName>
        <label>Species</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pork</fullName>
                </value>
                <value>
                    <fullName>Dairy</fullName>
                </value>
                <value>
                    <fullName>Beef</fullName>
                </value>
                <value>
                    <fullName>Small Ruminants</fullName>
                </value>
                <value>
                    <fullName>Sheep</fullName>
                </value>
                <value>
                    <fullName>Goat</fullName>
                </value>
                <value>
                    <fullName>Broiler</fullName>
                </value>
                <value>
                    <fullName>Layers</fullName>
                </value>
                <value>
                    <fullName>Other Poultry</fullName>
                </value>
                <value>
                    <fullName>Turkey</fullName>
                </value>
                <value>
                    <fullName>Ducks</fullName>
                </value>
                <value>
                    <fullName>Equine</fullName>
                </value>
                <value>
                    <fullName>Rabbit</fullName>
                </value>
                <value>
                    <fullName>Pet Food</fullName>
                </value>
                <value>
                    <fullName>Aquaculture</fullName>
                </value>
                <value>
                    <fullName>Specialty</fullName>
                </value>
                <value>
                    <fullName>Ingredient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Milk replacers</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Deer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_consumption_complete_feed_MT__c</fullName>
        <label>Total consumption complete feed  [MT]</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_js__c</fullName>
        <label>Total_js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfCalculation__c</fullName>
        <label>TypeOfCalculation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Simple Potential Estimate</fullName>
                </value>
                <value>
                    <fullName>Simple Potential Estimate - CFE</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption</fullName>
                </value>
                <value>
                    <fullName>Cycle Consumption - CFE</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption</fullName>
                </value>
                <value>
                    <fullName>Daily Animal Consumption - CFE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Concentrate</fullName>
                </value>
                <value>
                    <fullName>Premix</fullName>
                </value>
                <value>
                    <fullName>Not Defined</fullName>
                </value>
                <value>
                    <fullName>Other Specialties</fullName>
                </value>
                <value>
                    <fullName>Protein Treatment</fullName>
                </value>
                <value>
                    <fullName>Ingredients</fullName>
                </value>
                <value>
                    <fullName>Basemix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume__c</fullName>
        <label>Volume</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volume_of_our_product_MT__c</fullName>
        <label>Volume of our product (MT)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>volume_js__c</fullName>
        <label>volume_js</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PotenCalculationOperative</label>
    <nameField>
        <label>PotentialCalculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PotenCalculationOperatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>